refactore projectdata + producerFacade